Пример коммита и работы с гитом
