# docs/swagger.json
@@ -290,6 +290,11 @@
         },
         "/user/otkliks/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Возвращает список всех откликов для определенного пользователя по его ID",
                 "produces": [
                     "application/json"
@@ -302,7 +307,7 @@
                     {
                         "type": "integer",
                         "description": "ID пользователя",
-                        "name": "UID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
